--- a/scss/forms/_form-validation.scss
+++ b/scss/forms/_form-validation.scss
@@ -6,6 +6,6 @@
 // server side validation.
 @if $enable-form and $enable-form-validation {
     @each $state, $data in $form-validation-states {
-        @include form-validation-state($state, map-get($data, color), map-get($data, icon));
+        @include form-validation-state($state, $data...);
     }
 }
