--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -346,6 +346,14 @@ button {
     border-radius: 0;
 }
 
+// Explicitly remove focus outline in Chromium when it shouldn't be
+// visible (e.g. as result of mouse click or touch tap). Browser
+// should be doing this automatically, but seems to sometimes be
+// confused and applies its very visible two-tone outline anyway.
+button:focus:not(:focus-visible) {
+  outline: 0;
+}
+
 input,
 button,
 select,
