Stylelint: Ensure consistent use of border and outline resets

--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -77,7 +77,7 @@ body {
 // See https://developer.mozilla.org/en-US/docs/Web/CSS/:focus-visible
 // and https://developer.paciellogroup.com/blog/2018/03/focus-visible-and-backwards-compatibility/
 [tabindex="-1"]:focus:not(:focus-visible) {
-    outline: none !important;
+    outline: 0 !important;
 }
 
 
