--- a/scss/component/_nav.scss
+++ b/scss/component/_nav.scss
@@ -45,12 +45,11 @@
             .nav-link {
                 // Make the list-items overlay the bottom border
                 margin-bottom: -$nav-tabs-border-width;
-                text-decoration: none;
+                background: none;
                 border: $nav-tabs-border-width solid transparent;
                 @include border-radius($border-radius $border-radius 0 0);
 
                 @include hover-focus() {
-                    text-decoration: none;
                     background-color: $nav-tabs-hover-bg;
                     border-color: $nav-tabs-hover-border-color $nav-tabs-hover-border-color $nav-tabs-border-color;
                 }
@@ -87,12 +86,12 @@
             flex-flow: row wrap;
 
             .nav-link {
-                text-decoration: none;
+                background: none;
+                border: 0;
                 @include border-radius($nav-pills-border-radius);
 
                 @include hover-focus() {
                     color: inherit;
-                    text-decoration: none;
                     background-color: $nav-pills-hover-bg;
                 }
 
@@ -138,6 +137,25 @@
                 flex-grow: 1;
                 text-align: center;
             }
+        }
+    }
+
+    // Make sure button will grow
+    %nav-fill-justify-link-grow {
+        .nav-item .nav-link {
+            width: 100%;
+        }
+    }
+    @if $enable-nav-fill {
+        .nav-fill {
+            @extend %nav-fill-justify-link-grow;
+
+        }
+    }
+    @if $enable-nav-justify {
+        .nav-justify {
+            @extend %nav-fill-justify-link-grow;
+
         }
     }
 }
