Input Group: Fix border colors with validated controls

--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -139,6 +139,12 @@
                 }
             }
         }
+
+        .input-group .form-control {
+            @include form-validation-state-selector($state) {
+                z-index: 3;
+            }
+        }
     }
 
     @if $enable-form-control and $enable-form-validation-icon {
