--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -120,6 +120,9 @@
 
     // Special border colors
     @if $enable-utility-border-special {
+        .border-white { border-color: $white !important; }
+        .border-black { border-color: $black !important; }
         .border-transparent { border-color: transparent !important; }
+        .border-inherit { border-color: inherit !important; }
     }
 }
