--- a/scss/forms/_form-control.scss
+++ b/scss/forms/_form-control.scss
@@ -176,6 +176,7 @@
             @include font-size($form-text-font-size);
             font-style: $form-text-font-style;
             font-weight: $form-text-font-weight;
+            line-height: $form-text-line-height;
             color: $form-text-color;
         }
     }
