Modals: Add top and bottom aligned variants

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -196,6 +196,8 @@ $enable-modal-centered:                     true !default;
 $enable-modal-scrollable:                   true !default;
 $enable-modal-side-start:                   true !default;
 $enable-modal-side-end:                     true !default;
+$enable-modal-side-top:                     true !default;
+$enable-modal-side-bottom:                  true !default;
 $enable-modal-fullscreen:                   true !default;
 $enable-modal-fullscreen-responsive:        true !default;
 $enable-modal-header:                       true !default;
