Update WCAG and CCA links

--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -75,7 +75,7 @@ body {
 // wants focus outlines to always be presented.
 //
 // See https://developer.mozilla.org/en-US/docs/Web/CSS/:focus-visible
-// and https://developer.paciellogroup.com/blog/2018/03/focus-visible-and-backwards-compatibility/
+// and https://www.tpgi.com/focus-visible-and-backwards-compatibility/
 [tabindex="-1"]:focus:not(:focus-visible) {
     outline: 0 !important;
 }
