Lists: Update markers, add inner marker

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -138,6 +138,7 @@ $enable-jumbotron-fluid:                    true !default;
 $enable-list:                               true !default;
 $enable-list-bulleted:                      true !default;
 $enable-list-ordered:                       true !default;
+$enable-list-marker-inner:                  true !default;
 $enable-list-divided:                       true !default;
 $enable-list-ruled:                         true !default;
 $enable-list-group:                         true !default;
