--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -70,6 +70,18 @@
         }
     }
 
+    // Inner list marker
+    .list-marker-inner {
+        margin-left: 0;
+
+        > .list-item {
+            &::before {
+                position: static;
+                margin-left: 0;
+            }
+        }
+    }
+
     // Lists with borders
     %list-bordered {
         border-color: $list-border-color;
