fix lint error and add sass variable updates to docs

--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -71,13 +71,15 @@
     }
 
     // Inner list marker
-    .list-marker-inner {
-        margin-left: 0;
+    @if $enable-list-marker-inner {
+        .list-marker-inner {
+            margin-left: 0;
 
-        > .list-item {
-            &::before {
-                position: static;
-                margin-left: 0;
+            > .list-item {
+                &::before {
+                    position: static;
+                    margin-left: 0;
+                }
             }
         }
     }
