Lists: Update markers, add inner marker (#740)
* Lists: Update markers, add inner marker

* fix lint error and add sass variable updates to docs

--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -70,6 +70,20 @@
         }
     }
 
+    // Inner list marker
+    @if $enable-list-marker-inner {
+        .list-marker-inner {
+            margin-left: 0;
+
+            > .list-item {
+                &::before {
+                    position: static;
+                    margin-left: 0;
+                }
+            }
+        }
+    }
+
     // Lists with borders
     %list-bordered {
         border-color: $list-border-color;
