Popover: Add header font-weight variable

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1280,6 +1280,7 @@ $popover-header-padding-y:      .5rem !default;
 $popover-header-padding-x:      .75rem !default;
 
 $popover-header-font-size:      $font-size-base !default;
+$popover-header-font-weight:    null !default;
 $popover-header-color:          $headings-color !default;
 $popover-header-bg:             $component-section-bg !default;
 $popover-header-border-width:   $border-width !default;
