--- a/scss/mixins/_lists.scss
+++ b/scss/mixins/_lists.scss
@@ -7,7 +7,7 @@
 }
 
 // List context color
-@mixin list-item-variant($state, $bg, $color, $border, $hover-bg, $hover-color, $hover-border) {
+@mixin list-item-variant($state, $bg, $color, $border, $hover-bg, $hover-color, $hover-border, $active-bg: $hover-bg, $active-color: $hover-color, $active-border: $hover-border) {
     @if $enable-list-item-action {
         .list-item-action.list-item-#{$state} {
             @include hover-focus() {
@@ -24,9 +24,9 @@
         border-color: $border;
 
         &.active {
-            color: $hover-color;
-            background-color: $hover-bg;
-            border-color: $hover-border;
+            color: $active-color;
+            background-color: $active-bg;
+            border-color: $active-border;
         }
     }
 }
