--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1211,6 +1211,7 @@ $card-color:                null !default;
 $card-border-color:         $component-overlay-border-color !default;
 $card-border-width:         $border-width !default;
 $card-border-radius:        $border-radius !default;
+$card-box-shadow:           null !default;
 $card-inner-border-radius:  calc(#{$card-border-radius} - #{$card-border-width}) !default;
 
 $card-link-margin-left:     1.25rem !default;
