--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -11,6 +11,7 @@
         background-color: $card-bg;
         border: $card-border-width solid $card-border-color;
         @include border-radius($card-border-radius);
+        @include box-shadow($card-box-shadow);
 
         > hr {
             margin-right: 0;
