--- a/site/assets/4.2/scss/_syntax.scss
+++ b/site/assets/4.2/scss/_syntax.scss
@@ -1,4 +1,4 @@
-// stylelint-disable selector-no-qualifying-type, declaration-block-no-duplicate-properties
+// stylelint-disable selector-no-qualifying-type
 
 // Modified version of:
 // GHColors theme by Avi Aryan (http://aviaryan.in)
