Button: Adjust sizing when in flex container

--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -2,6 +2,7 @@
     // Base button
     .btn {
         display: inline-block;
+        align-self: center;
         font-family: $btn-font-family;
         font-weight: $btn-font-weight;
         text-align: center;
