Allow localized defaults for social media meta tags

--- a/site/_includes/4.2/partials/head_social.html
+++ b/site/_includes/4.2/partials/head_social.html
@@ -1,11 +1,12 @@
 <!-- Twitter -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@{{ site.twitter.name }}">
-<meta name="twitter:creator" content="@{{ site.twitter.name }}">
+<meta name="twitter:site" content="@{{ twitter.name | default: site.twitter.name }}">
+<meta name="twitter:creator" content="@{{ twitter.name | default: site.twitter.name }}">
 <meta name="twitter:title" content="{{ title | default: site.title | smartify }}">
 <meta name="twitter:description" content="{{ description | default: site.description | smartify }}">
-{% if site.twitter.image != "" -%}
-<meta name="twitter:image" content="{{ site.url | append: site.path | append: site.twitter.image }}">
+{% assign twitterImage = twitter.image | default: site.twitter.image -%}
+{% if twitterImage != "" -%}
+<meta name="twitter:image" content="{{ site.url | append: site.path | append: twitterImage }}">
 {% endif -%}
 
 <!-- Open Graph -->
@@ -13,7 +14,8 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="{{ title | default: site.title | smartify }}">
 <meta property="og:description" content="{{ description | default: site.description | smartify }}">
-<meta property="og:image" content="{{ site.url | append: site.path | append: site.og.image }}">
-<meta property="og:image:type" content="{{ site.og.image_type }}">
-<meta property="og:image:width" content="{{ site.og.image_width }}">
-<meta property="og:image:height" content="{{ site.og.image_height }}">
+{% assign ogImage = og.image | default: site.og.image -%}
+<meta property="og:image" content="{{ site.url | append: site.path | append: ogImage}}">
+<meta property="og:image:type" content="{{ og.image_type | default: site.og.image_type }}">
+<meta property="og:image:width" content="{{ og.image_width | default: site.og.image_width }}">
+<meta property="og:image:height" content="{{ og.image_height | default: site.og.image_height }}">
