--- a/site/_includes/4.2/partials/head_social.html
+++ b/site/_includes/4.2/partials/head_social.html
@@ -1,20 +1,22 @@
+{% assign twitterImage = twitter.image | default: site.twitter.image -%}
+{%- assign ogImage = og.image | default: site.og.image -%}
+{%- if layout == 'home' -%}
+  {%- assign twitterImage = ogImage -%}
+{%- endif -%}
 <!-- Twitter -->
-<meta name="twitter:card" content="summary">
+<meta name="twitter:card" content="{% if layout == 'home' %}summary_large_image{% else %}summary{% endif %}">
 <meta name="twitter:site" content="@{{ twitter.name | default: site.twitter.name }}">
 <meta name="twitter:creator" content="@{{ twitter.name | default: site.twitter.name }}">
 <meta name="twitter:title" content="{{ title | default: site.title | smartify }}">
 <meta name="twitter:description" content="{{ description | default: site.description | smartify }}">
-{% assign twitterImage = twitter.image | default: site.twitter.image -%}
 {% if twitterImage != "" -%}
 <meta name="twitter:image" content="{{ site.url | append: site.path | append: twitterImage }}">
 {% endif -%}
-
 <!-- Open Graph -->
 <meta property="og:url" content="{{ site.url }}">
-<meta property="og:type" content="website">
+<meta property="og:type" content="{% if layout == 'home' %}website{% else %}article{% endif %}">
 <meta property="og:title" content="{{ title | default: site.title | smartify }}">
 <meta property="og:description" content="{{ description | default: site.description | smartify }}">
-{% assign ogImage = og.image | default: site.og.image -%}
 <meta property="og:image" content="{{ site.url | append: site.path | append: ogImage}}">
 <meta property="og:image:type" content="{{ og.image_type | default: site.og.image_type }}">
 <meta property="og:image:width" content="{{ og.image_width | default: site.og.image_width }}">
