Add TM, fix version menu

--- a/site/_includes/4.2/partials/topnav.html
+++ b/site/_includes/4.2/partials/topnav.html
@@ -1,7 +1,7 @@
 <header class="navbar navbar-expand-lg navbar-dark print-none cf-header">
   <a href="{{ site.path }}/" class="navbar-brand me-0_5" aria-label="{{ site.title }}">
     {% include "./icons/figuration-outline.svg", class: "cf-header-logo" %}
-    <span class="sr-only-xs-down">CAST Figuration</span>
+    <span class="sr-only-xs-down">{{ site.regtitle }}</span>
   </a>
   <button class="navbar-toggle me-0_5" type="button" data-cfw="collapse" data-cfw-collapse-target="#cf-topnav" aria-label="Toggle navigation">
     <span class="cf-header-menu" aria-hidden="true">&#8801;</span>
