Add new Loader component

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -149,6 +149,11 @@ $enable-list-horizontal:                    true !default;
 $enable-list-item-action:                   true !default;
 $enable-list-item-colors:                   true !default;
 
+// Loader
+$enable-loader:                             true !default;
+$enable-loader-circle:                      true !default;
+$enable-loader-double:                      true !default;
+
 // Media Object
 $enable-media:                              true !default;
 
