--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -47,6 +47,7 @@
 @import "component/media";
 @import "component/card";
 @import "component/alert";
+@import "component/loader";
 
 // Components w/ JavaScript
 @import "component/modal";
