--- a/scss/functions/_map-util.scss
+++ b/scss/functions/_map-util.scss
@@ -1,5 +1,5 @@
 // Map deep get
-// @author Hugo Giraudel
+// @author Kitty Giraudel
 // From: https://css-tricks.com/snippets/sass/deep-getset-maps/
 // @access public
 // @param {Map} $map - Map
