--- a/scss/functions/_str-util.scss
+++ b/scss/functions/_str-util.scss
@@ -1,5 +1,5 @@
 // Replace `$search` with `$replace` in `$string`
-// @author Hugo Giraudel
+// @author Kitty Giraudel
 // From https://css-tricks.com/snippets/sass/str-replace-function/
 // @param {String} $string - Initial string
 // @param {String} $search - Substring to replace
