--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -28,6 +28,7 @@
 @import "core/buttons";
 
 // Components - additional functionality and layout
+@import "component/container";
 @import "component/grid";
 @import "component/animation";
 @import "component/caret";
