--- a/site/_includes/4.2/partials/topnav.html
+++ b/site/_includes/4.2/partials/topnav.html
@@ -12,7 +12,7 @@
         <a href="{{ site.path }}{{ pathVersion }}/get-started/quick-start/" class="nav-link{% if group == "get-started" %} active" aria-current="true{% endif %}">Get Started</a>
       </li>
       <li class="nav-item">
-        <a href="{{ site.path }}{{ pathVersion }}/layout/overview/" class="nav-link{% if group == "layout" %} active" aria-current="true{% endif %}">Layout</a>
+        <a href="{{ site.path }}{{ pathVersion }}/layout/breakpoints/" class="nav-link{% if group == "layout" %} active" aria-current="true{% endif %}">Layout</a>
       </li>
       <li class="nav-item">
         <a href="{{ site.path }}{{ pathVersion }}/content/reboot/" class="nav-link{% if group == "content" %} active" aria-current="true{% endif %}">Content</a>
