--- a/site/4.2/layout/index.html
+++ b/site/4.2/layout/index.html
@@ -1,6 +1,6 @@
 ---
 layout: alias
 usePathVersion: true
-destination: "layout/overview/"
+destination: "layout/breakpoints/"
 sitemapIgnore: true
 ---
