--- a/site/_aliases/layout/index.html
+++ b/site/_aliases/layout/index.html
@@ -1,7 +1,7 @@
 ---
 layout: alias
 usePathVersion: true
-destination: "layout/overview/"
+destination: "layout/breakpoints/"
 sitemapIgnore: true
 permalink: "/layout/"
 ---
