Utilities: Add vertical rule

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -330,3 +330,5 @@ $enable-utility-text-size:                  true !default;
 $enable-utility-valign:                     true !default;
 
 $enable-utility-visibility:                 true !default;
+
+$enable-utility-vr:                         true !default;
