--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -88,8 +88,8 @@ body {
 hr {
     margin: $hr-margin-y 0;
     color: $hr-color; // 1
-    background-color: currentColor;
-    border: 0;
+    background-color: $hr-bg;
+    border: $hr-border;
     opacity: $hr-opacity;
 }
 
