Typography: Add kbd nested background color

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -660,6 +660,7 @@ $kbd-padding-y:             .125rem !default;
 $kbd-bg:                    $uibase-900 !default;
 $kbd-color:                 $uibase-50 !default;
 $kbd-box-shadow:            inset 0 -.1rem 0 rgba($black, .25) !default;
+$kbd-nested-bg:             null !default;
 $kbd-nested-font-weight:    $font-weight-bold !default;
 $kbd-border-radius:         .1875rem !default;
 
